Adicionado ConfigurableResource para o geosampa

--- a/Dockerfile_gRPC
+++ b/Dockerfile_gRPC
@@ -8,7 +8,9 @@ RUN pip install \
     dagster-postgres \
     pandas \
     pyarrow \
-    dagster_aws
+    dagster_aws \
+    httpx \
+    tenacity
 
 ARG DAGSTER_HOME
 
