Adicionada dependência faltante

--- a/Dockerfile_gRPC
+++ b/Dockerfile_gRPC
@@ -10,7 +10,8 @@ RUN pip install \
     pyarrow \
     dagster_aws \
     httpx \
-    tenacity
+    tenacity \
+    xmltodict
 
 ARG DAGSTER_HOME
 
