dockerfiles e configurações do dagster ajustadas

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,5 @@
-MINIO_ENDPOINT_URL=http://server:port
+MINIO_CONTAINER_NAME=minio
+MINIO_ENDPOINT_URL=http://${MINIO_CONTAINER_NAME}:9000
 MINIO_ROOT_USER=minio_root_user
 MINIO_ROOT_PASSWORD=minio_root_password
 MINIO_BRONZE_BUCKET_NAME=bucket-name
@@ -6,9 +7,16 @@ MINIO_SILVER_BUCKET_NAME=bucket-name
 
 DAGSTER_HOME=/dagster/home/dir
 DAGSTER_MODULE_NAME=dagster_module_name
+DAGSTER_PG_HOST=dagster_pg_host
+DAGSTER_PG_PORT=dagster_pg_port
 DAGSTER_PG_USERNAME=dagster_pg_username
 DAGSTER_PG_PASSWORD=dagster_pg_password
 DAGSTER_PG_DB=dagster_pg_db
+DAGSTER_LOCAL_ARTIFACT_STORAGE_DIR=/dagster/local/dir
+DAGSTER_COMPUTE_LOGS_BUCKET=bucket-name
+
+AWS_ACCESS_KEY_ID=${MINIO_ROOT_USER}
+AWS_SECRET_ACCESS_KEY=${MINIO_ROOT_PASSWORD}
 
 GOLD_DB_HOST=gold_db_host
 GOLD_DB_PORT=gold_db_port
