--- a/dagster.yaml
+++ b/dagster.yaml
@@ -9,21 +9,26 @@ storage:
         env: DAGSTER_PG_PASSWORD
       db_name:
         env: DAGSTER_PG_DB
-      port: 5432
+      port:
+        env: DAGSTER_PG_PORT
 
-# You could directly set the `base_dir` key
 compute_logs:
-  module: dagster.core.storage.local_compute_log_manager
-  class: LocalComputeLogManager
+  module: dagster_aws.s3.compute_log_manager
+  class: S3ComputeLogManager
   config:
-    base_dir: /opt/dagster/logs/
+    bucket:
+      env: DAGSTER_COMPUTE_LOGS_BUCKET
+    use_ssl: false
+    endpoint_url:
+        env: MINIO_ENDPOINT_URL
 
 local_artifact_storage:
   module: dagster.core.storage.root
   class: LocalArtifactStorage
   config:
-    base_dir: "/opt/dagster/local/"
-
+    base_dir:
+      env: DAGSTER_LOCAL_ARTIFACT_STORAGE_DIR
+      
 scheduler:
   module: dagster.core.scheduler
   class: DagsterDaemonScheduler
