--- a/docker-compose.hom.yml
+++ b/docker-compose.hom.yml
@@ -153,7 +153,8 @@ services:
       - datalake_network
     entrypoint: >
       /bin/sh -c "
-      /usr/bin/mc alias set minio http://minio:9000 ${MINIO_ROOT_USER} ${MINIO_ROOT_PASSWORD};
+      /usr/bin/mc alias set minio ${MINIO_ENDPOINT_URL} ${MINIO_ROOT_USER} ${MINIO_ROOT_PASSWORD};
+      /usr/bin/mc mb minio/${DAGSTER_COMPUTE_LOGS_BUCKET};
       /usr/bin/mc mb minio/${MINIO_BRONZE_BUCKET_NAME};
       /usr/bin/mc version enable minio/${MINIO_BRONZE_BUCKET_NAME};
       /usr/bin/mc mb minio/${MINIO_SILVER_BUCKET_NAME};
