Adicionada env var para a porta do postgres

--- a/docker-compose.hom.yml
+++ b/docker-compose.hom.yml
@@ -30,6 +30,7 @@ services:
     image: dagster_grpc
     environment:
       DAGSTER_PG_HOST: ${DAGSTER_PG_HOST}
+      DAGSTER_PG_PORT: ${DAGSTER_PG_PORT}
       DAGSTER_PG_USERNAME: ${DAGSTER_PG_USERNAME}
       DAGSTER_PG_PASSWORD: ${DAGSTER_PG_PASSWORD}
       DAGSTER_PG_DB: ${DAGSTER_PG_DB}
@@ -86,6 +87,7 @@ services:
     environment:
       DAGSTER_HOME: ${DAGSTER_HOME}
       DAGSTER_PG_HOST: ${DAGSTER_PG_HOST}
+      DAGSTER_PG_PORT: ${DAGSTER_PG_PORT}
       DAGSTER_PG_USERNAME: ${DAGSTER_PG_USERNAME}
       DAGSTER_PG_PASSWORD: ${DAGSTER_PG_PASSWORD}
       DAGSTER_PG_DB: ${DAGSTER_PG_DB}
@@ -116,6 +118,7 @@ services:
     environment:
       DAGSTER_HOME: ${DAGSTER_HOME}
       DAGSTER_PG_HOST: ${DAGSTER_PG_HOST}
+      DAGSTER_PG_PORT: ${DAGSTER_PG_PORT}
       DAGSTER_PG_USERNAME: ${DAGSTER_PG_USERNAME}
       DAGSTER_PG_PASSWORD: ${DAGSTER_PG_PASSWORD}
       DAGSTER_PG_DB: ${DAGSTER_PG_DB}
