--- a/docker-compose.hom.yml
+++ b/docker-compose.hom.yml
@@ -142,13 +142,19 @@ services:
     environment:
       MINIO_ROOT_USER: ${MINIO_ROOT_USER}
       MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD}
+    expose:
+      - 9000
+      - 9001
     ports:
       - 9000:9000
+      - 9001:9001
     networks:
       - datalake_network
     command:
       - server
       - /data
+      - --console-address
+      - :9001
 
 # minio client for the creation of bronze and silver tier buckets
   createbuckets:
