Corrigidas env vars do gRPC

--- a/docker-compose.hom.yml
+++ b/docker-compose.hom.yml
@@ -37,8 +37,10 @@ services:
       DAGSTER_CURRENT_IMAGE: "dagster_grpc"
       DAGSTER_GRPC_HOST: "0.0.0.0"
       DAGSTER_GRPC_PORT: "4000"
-      DAGSTER_WORKING_DIRECTORY: $DAGSTER_HOME
-      DAGSTER_MODULE_NAME: $DAGSTER_MODULE_NAME
+      DAGSTER_WORKING_DIRECTORY: ${DAGSTER_HOME}
+      DAGSTER_MODULE_NAME: ${DAGSTER_MODULE_NAME}
+      DAGSTER_LOCAL_ARTIFACT_STORAGE_DIR: ${DAGSTER_LOCAL_ARTIFACT_STORAGE_DIR}
+      DAGSTER_COMPUTE_LOGS_BUCKET: ${DAGSTER_COMPUTE_LOGS_BUCKET}
       MINIO_ROOT_USER: ${MINIO_ROOT_USER}
       MINIO_ROOT_PASSWORD: ${MINIO_ROOT_PASSWORD}
       MINIO_BRONZE_BUCKET_NAME: ${MINIO_BRONZE_BUCKET_NAME}
