Conversão das camadas em GeoDataFrame

--- a/Dockerfile_gRPC
+++ b/Dockerfile_gRPC
@@ -7,6 +7,8 @@ RUN pip install \
     dagster \
     dagster-postgres \
     pandas \
+    geopandas \
+    matplotlib \
     pyarrow \
     dagster_aws \
     httpx \
