--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,9 @@ DAGSTER_PG_PASSWORD=dagster_pg_password
 DAGSTER_PG_DB=dagster_pg_db
 DAGSTER_LOCAL_ARTIFACT_STORAGE_DIR=/dagster/local/dir
 DAGSTER_COMPUTE_LOGS_BUCKET=bucket-name
+DAGSTER_EXECUTOR_MAX_CONCURRENCY=4
+GEOSAMPA_JOB_MAX_CONCURRENCY=4
+
 
 AWS_ACCESS_KEY_ID=${MINIO_ROOT_USER}
 AWS_SECRET_ACCESS_KEY=${MINIO_ROOT_PASSWORD}
