--- a/Dockerfile_dagster
+++ b/Dockerfile_dagster
@@ -1,11 +1,11 @@
 FROM python:3.10-slim
 
 RUN pip install \
-    dagster \
-    dagster-postgres \
-    dagster-webserver \
-    pandas \
-    dagster_aws
+    dagster==1.4.15 \
+    dagster-postgres==0.20.15 \
+    dagster-webserver==1.4.15 \
+    pandas==2.1.0 \
+    dagster-aws==0.20.15
 
 ARG DAGSTER_HOME
 
