--- a/dashboard/requirements.txt
+++ b/dashboard/requirements.txt
@@ -1,6 +1,7 @@
 dash==2.14.2
-dash-leaflet[geobuf]==1.0.11
+dash-daq==0.5.0
 dash-extensions==1.0.4
+dash-leaflet[geobuf]==1.0.11
 geopandas==0.14.1
 pyarrow==14.0.2
 python-dotenv==1.0.0
