--- a/dashboard/requirements.txt
+++ b/dashboard/requirements.txt
@@ -2,6 +2,7 @@ dash==2.14.2
 dash-daq==0.5.0
 dash-extensions==1.0.4
 dash-leaflet[geobuf]==1.0.11
+duckdb==0.9.2
 geopandas==0.14.1
 pyarrow==14.0.2
 python-dotenv==1.0.0
