--- a/requirements.txt
+++ b/requirements.txt
@@ -2,11 +2,13 @@ dagster==1.5.13
 dagster-aws==0.21.13
 dagster-postgres==0.21.13
 dagster-webserver==1.5.13
-pandas==2.1.0
+duckdb==0.9.2
 geopandas==0.14.0
-matplotlib==3.8.0
-seaborn==0.12.2
-pyarrow==13.0.0
 httpx==0.24.1
+matplotlib==3.8.0
+pandas==2.1.0
+pyarrow==13.0.0
+seaborn==0.12.2
+sqlparse==0.4.4
 tenacity==8.2.3
 xmltodict==0.13.0
