Adicionada Dockerfile do dashboard

--- a/.env.example
+++ b/.env.example
@@ -24,3 +24,6 @@ GOLD_DB_PORT=5433
 GOLD_DB_USER=gold_db_user
 GOLD_DB_PASSWORD=gold_db_password
 GOLD_DB_NAME=gold_db
+
+DASH_HOME=/opt/dash
+DASH_PORT=7777
