Updated dockerfile and compose file

--- a/Dockerfile_gRPC
+++ b/Dockerfile_gRPC
@@ -14,7 +14,9 @@ RUN pip install \
     dagster-aws==0.21.13 \
     httpx==0.24.1 \
     tenacity==8.2.3 \
-    xmltodict==0.13.0
+    xmltodict==0.13.0 \
+    duckdb==0.10.1 \
+    sqlparse==0.4.4
 
 ARG DAGSTER_HOME
 
