Configurações iniciais adicionadas

--- a/.env.example
+++ b/.env.example
@@ -27,3 +27,7 @@ GOLD_DB_NAME=gold_db
 
 DASH_HOME=/opt/dash
 DASH_PORT=7777
+
+INTRANET_DOMAIN=localhost
+DAGSTER_PATH=/dagster
+TRAEFIK_BASICAUTH_USERS=admin:$2y$05$7YxgYC63mXMJr9Buh9QaS./SpqP3KXj8m.7RUd8XIhEI/CicWasG6
