Adicionadas variáveis de ambiente para certificado ssl

--- a/.env.example
+++ b/.env.example
@@ -31,3 +31,5 @@ DASH_PORT=7777
 INTRANET_DOMAIN=localhost
 DAGSTER_PATH=/dagster
 TRAEFIK_BASICAUTH_USERS=admin:$2y$05$7YxgYC63mXMJr9Buh9QaS./SpqP3KXj8m.7RUd8XIhEI/CicWasG6
+LE_ACME_URL=https://acme-v02.api.letsencrypt.org/directory
+LE_EMAIL=fake@mail.com
