--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -86,8 +86,6 @@ services:
     container_name: dagster_webserver
     expose:
       - 3000
-    ports:
-      - 3000:3000
     environment:
       DAGSTER_HOME: ${DAGSTER_HOME}
       DAGSTER_PG_HOST: ${DAGSTER_PG_HOST}
@@ -100,7 +98,7 @@ services:
       MINIO_ENDPOINT_URL: ${MINIO_ENDPOINT_URL}
       AWS_ACCESS_KEY_ID: ${AWS_ACCESS_KEY_ID}
       AWS_SECRET_ACCESS_KEY: ${AWS_SECRET_ACCESS_KEY}
-    volumes: # Make docker client accessible so we can terminate containers from the webserver
+    volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     networks:
       - dagster_network
@@ -111,8 +109,9 @@ services:
       - gold_db
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.dagster.entrypoints=web"
+      - "traefik.http.routers.dagster.entrypoints=websecure"
       - "traefik.http.routers.dagster.rule=(Host(`${INTRANET_DOMAIN}`) || Host(`www.${INTRANET_DOMAIN}`)) && PathPrefix(`${DAGSTER_PATH}`)"
+      - "traefik.http.routers.dagster.tls=true"
       - "traefik.http.services.dagster.loadbalancer.server.port=3000"
       - "traefik.http.routers.dagster.middlewares=dagster-ratelimit,simpleauth"
       - "traefik.http.middlewares.dagster-ratelimit.ratelimit.average=1000"
