Adicionada variável para domínio na internet

--- a/.env.example
+++ b/.env.example
@@ -28,7 +28,8 @@ GOLD_DB_NAME=gold_db
 DASH_HOME=/opt/dash
 DASH_PORT=7777
 
-INTRANET_DOMAIN=localhost
+INTERNET_DOMAIN=localhost
+INTRANET_DOMAIN=127.0.0.1
 DAGSTER_PATH=/dagster
 TRAEFIK_BASICAUTH_USERS=admin:$2y$05$7YxgYC63mXMJr9Buh9QaS./SpqP3KXj8m.7RUd8XIhEI/CicWasG6
 LE_ACME_URL=https://acme-v02.api.letsencrypt.org/directory
