--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ MINIO_ROOT_USER=minioadmin
 MINIO_ROOT_PASSWORD=minioadmin
 MINIO_BRONZE_BUCKET_NAME=bronze-db
 MINIO_SILVER_BUCKET_NAME=silver-db
+MINIO_CONSOLE_PORT=9001
 
 DAGSTER_HOME=/git/hydra/
 DAGSTER_MODULE_NAME=hydra
