--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,7 @@ MINIO_ROOT_USER=minioadmin
 MINIO_ROOT_PASSWORD=minioadmin
 MINIO_BRONZE_BUCKET_NAME=bronze-db
 MINIO_SILVER_BUCKET_NAME=silver-db
+MINIO_CONSOLE_PORT=9001
 
 DAGSTER_HOME=/git/hydra/
 DAGSTER_MODULE_NAME=hydra
@@ -28,6 +29,9 @@ GOLD_DB_NAME=gold_db
 DASH_HOME=/opt/dash
 DASH_PORT=7777
 
-INTRANET_DOMAIN=localhost
+INTERNET_DOMAIN=localhost
+INTRANET_DOMAIN=127.0.0.1
 DAGSTER_PATH=/dagster
 TRAEFIK_BASICAUTH_USERS=admin:$2y$05$7YxgYC63mXMJr9Buh9QaS./SpqP3KXj8m.7RUd8XIhEI/CicWasG6
+LE_ACME_URL=https://acme-v02.api.letsencrypt.org/directory
+LE_EMAIL=fake@mail.com
