--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -241,6 +241,8 @@ services:
       - "traefik.http.routers.dash.entrypoints=websecure"
       - "traefik.http.routers.dash.rule=Host(`${INTERNET_DOMAIN}`) || Host(`www.${INTERNET_DOMAIN}`)"
       - "traefik.http.routers.dash.tls=true"
+      - "traefik.http.routers.dash.tls.domains[0].main=${INTERNET_DOMAIN}"
+      - "traefik.http.routers.dash.tls.domains[1].main=www.${INTERNET_DOMAIN}"
       - "traefik.http.services.dash.loadbalancer.server.port=${DASH_PORT}"
       - "traefik.http.routers.dash.middlewares=dash-ratelimit"
       - "traefik.http.middlewares.dash-ratelimit.ratelimit.average=1000"
