63 adicionar duckdb ao dagster (#83)
* Implementação inicial do IOManager

* Revert "Implementação inicial do IOManager"

This reverts commit 6b3bd769eeb5a5b4e15c56c6e5610b365b7f2846.

* Adicionado dao independente

* Removido método inválido

* Adicionado resource para o duckdbdao

* DAO ajustado para a escrita de parquet compatível com geoparquet

* Atualizado requirements.txt

* Renomeado arquivo com a resource para o duckdb

* Ajustada definição da resource do duckdb

* Primeira versão funcional do asset setor_censitario_enriched_geosampa usando o duckdb

* Adicionada amostra aos metadados

* Refactor to improve readability

* Added environment variable

* Added geometry column specification

* Updated duckdb version

* Updated dockerfile and compose file

* Adicionada funcionalidade de detecção automatica de colunas do tipo geometry

* Corrigida funcionalidade de correcao de colunas de geometria

* Atualizada versao do duckdb para suporte a geoparquet

* Atualizadas conversoes de crs para compatibilidade com geoparquet

* Adicionada comparacao de crs com o default_crs e suporte a colunas sem crs especificado

* Adicionada terminacao em newline

--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,8 @@ DAGSTER_LOCAL_ARTIFACT_STORAGE_DIR=/git/dagster/local
 DAGSTER_COMPUTE_LOGS_BUCKET=dagster-logs
 GEOSAMPA_JOB_MAX_CONCURRENCY=1
 
+DUCKDB_PATH=/tmp/duck.db
+
 AWS_ACCESS_KEY_ID=${MINIO_ROOT_USER}
 AWS_SECRET_ACCESS_KEY=${MINIO_ROOT_PASSWORD}
 
