fix - adicionando envvar CENSO_2022_JOB_MAX_CONCURRENCY

--- a/.env.example
+++ b/.env.example
@@ -16,6 +16,7 @@ DAGSTER_PG_DB=dagster_pg_db
 DAGSTER_LOCAL_ARTIFACT_STORAGE_DIR=/git/dagster/local
 DAGSTER_COMPUTE_LOGS_BUCKET=dagster-logs
 GEOSAMPA_JOB_MAX_CONCURRENCY=1
+CENSO_2022_JOB_MAX_CONCURRENCY=1
 
 DUCKDB_PATH=/tmp/duck.db
 
