--- a/streamlit-pmsb/requirements_streamlit.txt
+++ b/streamlit-pmsb/requirements_streamlit.txt
@@ -77,6 +77,7 @@ pandocfilters==1.5.1
 parso==0.8.4
 pillow==11.0.0
 platformdirs==4.3.6
+plotly==5.24.1
 prometheus_client==0.21.1
 prompt_toolkit==3.0.50
 protobuf==5.29.2
